finished up draft; working on suppl figs

--- a/ms_0_abst.Rmd
+++ b/ms_0_abst.Rmd
@@ -13,20 +13,14 @@ Abstracts should not include:
   Citations
   Abbreviations, if possible
 -->
-from intro:
-Knowing where species exist and thrive is fundamental to the sciences of ecology, biogeography, and conservation.  This body of science has resulted in various compiled databases of species distribution and range maps which provide foundational information for understanding species diversity and extinction risk, predicting species responses to human impacts and climate change, and managing and protecting species effectively.  No species range dataset can claim to represent the "truth" of any species' spatial distribution, but rather each offers its own distinct understanding of that latent distribution.  These varying predictions of species presence and absence, driven by intent and methodology, can result in very different predictions of species presence; however, conservation managers and policy makers must base their actions on conclusions drawn from these imperfect datasets.  It is critical to understand the differences in spatial range datasets and the implications of these differences for conservation research and decision-making.
+
+<!-- from intro: -->
+<!-- Knowing where species exist and thrive is fundamental to the sciences of ecology, biogeography, and conservation.  This body of science has resulted in various compiled databases of species distribution and range maps which provide foundational information for understanding species diversity and extinction risk, predicting species responses to human impacts and climate change, and managing and protecting species effectively.  No species range dataset can claim to represent the "truth" of any species' spatial distribution, but rather each offers its own distinct understanding of that latent distribution.  These varying predictions of species presence and absence, driven by intent and methodology, can result in very different predictions of species presence; however, conservation managers and policy makers must base their actions on conclusions drawn from these imperfect datasets.  It is critical to understand the differences in spatial range datasets and the implications of these differences for conservation research and decision-making. -->
  
 Species distribution data provide the foundation for a wide range of ecological research studies and conservation management decisions.  Two major efforts to provide marine species distributions at a global scale are the International Union for Conservation of Nature (IUCN), which provides expert-generated range maps that outline the complete extent of a species' distribution; and AquaMaps, which provides model-generated species distribution maps that predict areas occupied by the species.  Neither dataset claims to represent the "truth" of species' spatial distributions, but rather each communicates a distinct understanding of the underlying distribution, with a distinct purpose in mind.
 
-Distinctions in intent and methodology can result in very different predictions of species distributions; these differences bear important implications for scientists and decision makers who rely on these datasets to inform conservation policy and management actions.  
+Together these databases represent `r format(n_spp_all, big.mark = ',')` species (`r format(p_spp_am, big.mark = ',')`% within AquaMaps, `r format(p_spp_iucn, big.mark = ',')`% within IUCN), with only `r format(n_spp_both, big.mark = ',')` shared species.  Ideally, the decision to use one dataset one over the other should carefully consider the purpose for which it was designed, but this small overlap between the two suggests that data availability is likely an important factor as well.
 
-Together these databases represent `r format(n_spp_all, big.mark = ',')` species (`r format(p_spp_am, big.mark = ',')`% within AquaMaps, `r format(p_spp_iucn, big.mark = ',')`% within IUCN), with only `r format(n_spp_both, big.mark = ',')` shared species.  Ideally, the decision to use one dataset one over the other should carefully consider the purpose for which it was designed, but this small overlap between the two suggests that data availability is likely a more important factor.
+Differences in intent and methodology can result in very different predictions of species distributions, which bear important implications for scientists and decision makers who rely upon these datasets to inform conservation policy and management actions.  Comparing distributions for the small subset of species with maps in both datasets, we highlight several differences resulting from differences in methodology and intent.  In particular, we find that IUCN maps greatly overpredict coral presence into unsuitably deep waters, and we demonstrate that AquaMaps methodology can produce odd discontinuities at the extremes of a species range.  We illustrate the scientific and management implications of these tradeoffs by repeating a global analysis of gaps in coverage of marine protected areas, and find significantly different results depending on how the two datasets are used.
 
-Comparing these overlapping predicted species ranges, we highlight several important differences between the two datasets, tradeoffs, blah blah
-
-We illustrate the scientific and management implications of these differences/tradeoffs by repeating a global analysis of gaps in coverage of marine protected areas, and find significantly different results depending on how the two datasets are used.  
-
-While we suggest methods to address specific errors in each spatial dataset, it remains essential to understand the implications of dataset differences for conservation planning and decision-making.
-
-
-FRAME as tradeoffs rather than differences; this could be a way to bring the two datasets together for the last paragraph of the results and discussion - minimizing tradeoffs rather than fixing differences?
+It remains essential to recognizes the tradeoffs between these two valuable marine datasets, and understand the implications of these tradeoffs for conservation research and decision-making.
