--- a/ms_4_refs.Rmd
+++ b/ms_4_refs.Rmd
@@ -2,7 +2,7 @@
 
 <!-- Acknowledgments. List acknowledgments and funding sources. PNAS collaborates with FundRef to use a standard taxonomy of funder names. Dedications are rarely allowed. -->
 
-We are thankful to Melanie Frazier and Julia Stewart Lowndes for their insightful comments on earlier versions of this manuscript, and to the National Center for Ecological Analysis and Synthesis for computation support.  We acknowledge financial support from the Gordon and Betty Moore Foundation. 
+We are thankful to Melanie Frazier, Julia Stewart Lowndes, Halley Froelich, Claire Runge, and two anonymous reviewers for their insightful comments on earlier versions of this manuscript, and to the National Center for Ecological Analysis and Synthesis for computation support.  We acknowledge financial support from the Gordon and Betty Moore Foundation. 
 
 -----
 
