--- a/ms_1_intro.Rmd
+++ b/ms_1_intro.Rmd
@@ -17,7 +17,17 @@ Knowing where species exist and thrive is fundamental to the sciences of ecology
 
 The two most comprehensive, widely-used global-scale repositories that predict marine species ranges throughout the world's oceans are AquaMaps, which rely primarily on model predictions to communicate the distribution of a species based on habitat suitability [@kaschner_aquamaps:_2015], and range data from the International Union for Conservation of Nature (IUCN), which rely primarily on expert opinion to communicate range size as a criterion for extinction risk assessments [@iucn_iucn_2015]. 
 
-While the two datasets ostensibly describe the same information, i.e. where can a particular species be found, they communicate fundamentally distinct concepts.  The IUCN range map for a given species describes the "extent of occurrence" for that species, a contiguous region that encloses all known occurrences and connecting regions, with the explicit caveat that this "does not mean that [the species] is distributed equally within that polygon or occurs everywhere within that polygon" [@iucn_iucn_2015].  The AquaMaps map for a species, on the other hand, seems to better be defined as "area of occupancy": the subset of the extent of occurrence in which the species is actually likely to be found, for example by excluding unsuitable habitats from the extent of occurrence [@iucn_iucn_2015].  The distinctions between extent of occurrence and area of occupancy, including methodology, limitations, and appropriate usage, are well documented [@rondinini_tradeoffs_2006; @gaston_sizes_2009]. ___include reference to a supplemental table for more details?___
+While the two datasets ostensibly describe the same information, i.e. where can a particular species be found, they communicate fundamentally distinct concepts.  The IUCN range map for a given species describes the "extent of occurrence" for that species, a contiguous region that encloses all known occurrences and connecting regions, with the explicit caveat that this "does not mean that [the species] is distributed equally within that polygon or occurs everywhere within that polygon" [@iucn_iucn_2015].  The AquaMaps map for a species, on the other hand, excludes unsuitable habitats and thus seems to better be defined as "area of occupancy": the subset of the extent of occurrence in which the species is actually likely to be found [@iucn_iucn_2015].  <!--The distinctions between extent of occurrence and area of occupancy, including methodology, limitations, and intended purpose, are well documented [@rondinini_tradeoffs_2006; @gaston_sizes_2009]. ___include table for more details?___ -->
+
+<!--
+_Uncertainties inherent in method and intent inevitably drive differences in the range predictions made by each dataset: extent of occurrence range data such as IUCN range maps will inevitably introduce commission errors (inaccurate indication of presence), while species distribution models such as AquaMaps are expected to introduce fewer commission errors at the expense of more omission errors (inaccurate indications of absence) [@rondinini_tradeoffs_2006].  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range [@rondinini_tradeoffs_2006; @jetz_ecological_2008]._ 
+
+| ... | Extent of Occurrence | Area of Occupancy |
+|:--- |:-----                |:------            |
+| Definition | Extent of occurrence is defined as the area contained within the shortest continuous imaginary boundary which can be drawn to encompass all the known, inferred or projected sites of present occurrence of a taxon, excluding cases of vagrancy (see Figure 2). This measure may exclude discontinuities or disjunctions within the overall distributions of taxa (e.g. large areas of obviously unsuitable habitat) (but see 'area of occupancy', point 10 below). [@iucn] | Area of occupancy is defined as the area within its 'extent of occurrence' (see point 9 above) which is occupied by a taxon, excluding cases of vagrancy. The measure reflects the fact that a taxon will not usually occur throughout the area of its extent of occurrence, which may contain unsuitable or unoccupied habitats. [@iucn] |
+| Purpose | 
+| 
+-->
 
 <!--
 _paragraph describing IUCN and AM as extent of occurrence and area of occupancy respectively, with basic defs and implication that AM will generally be smaller than IUCN; possibly refer to Table S1 for defs and details?_ _one reference: http://www.biodiversitya-z.org/content/species-extent-of-occurrence-eoo "The intent behind this parameter is to measure the degree to which risks from threatening factors are spread spatially across the taxon’s geographical distribution. It is not intended to be an estimate of the amount of occupied or potential habitat, or a general measure of the taxon’s range" and http://www.biodiversitya-z.org/content/species-area-of-occupancy-aoo "The measure reflects the fact that a taxon will not usually occur throughout the area of its extent of occurrence, which may, for example, contain unsuitable habitats"_
@@ -26,8 +36,6 @@ _paragraph describing IUCN and AM as extent of occurrence and area of occupancy 
 The fundamental differences between the datasets suggest that the choice of one over the other should be carefully matched to the purpose for which it is to be used [@gaston_sizes_2009], and yet these datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013-1], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].  In most of these cases, the implications of choosing one versus the other of these datasets is not evaluated or discussed, yet strong conservation and management conclusions are drawn from the results of the studies.
 
 Here we focus not on how the two datasets should ideally be used; instead, recognizing that each provides distinct value for conservation research, we explore hidden assumptions and sources of error within each dataset, and test the implications of choosing one over the other.  You do science with the data you have, not with the data you wish you had; often, the ideal type of spatial data is not available, and non-ideal data is better than no data at all.  In such a case, it is crucial to acknowledge, and where possible address, the resulting tradeoffs.
-
-___include as table, in body or in supplemental?  It really kind of doesn't fit here any more___ _Uncertainties inherent in method and intent inevitably drive differences in the range predictions made by each dataset: extent of occurrence range data such as IUCN range maps will inevitably introduce commission errors (inaccurate indication of presence), while species distribution models such as AquaMaps are expected to introduce fewer commission errors at the expense of more omission errors (inaccurate indications of absence) [@rondinini_tradeoffs_2006].  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range [@rondinini_tradeoffs_2006; @jetz_ecological_2008]._ 
 
 Data availability is a crucial factor in deciding which dataset to use.  We compare how each data source represents the global spatial and taxonomic distribution of the `r format(n_spp_all, big.mark = ',')` marine species mapped by one or both datasets.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to marine biodiversity to date have used AquaMaps.  IUCN range map data exist for `r format(n_spp_iucn, big.mark = ',')` unique marine species, with only `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets.  This small overlap means each dataset provides unique value in taxonomic and geographic coverage, but also suggests that data availability likely plays a larger role in selecting a dataset than does the intended purpose of the data.
 
