--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -3,18 +3,18 @@
 
 ## About the datasets
 
-The IUCN publishes species range maps developed by species experts.  These experts outline spatial boundaries that define the "limits of distribution" of a given species, based on observation records and informed by expert understanding of species' range and habitat preferences (Fig S1A).  ___some note about IUCN directions for creating the maps???___.  For the purposes of this analysis, we did not use IUCN data for bird species, which are available separately through Bird Life International [@birdlife_international_and_natureserve_bird_2015].
+The IUCN publishes species range maps developed by species experts.  These experts outline spatial boundaries that define the "limits of distribution" of a given species, based on observation records and informed by expert understanding of species' range and habitat preferences (Fig S1A). IUCN guidelines generally recommend that boundaries be drawn as a "minimum convex polygon": "the smallest polygon in which no internal angle exceeds 180 degrees and which contains all the sites of occurrence" [@iucn_iucn_2015].  For the purposes of this analysis, we elected not to use IUCN data for bird species, which are available separately through Bird Life International [@birdlife_international_and_natureserve_bird_2015].
 
 In contrast, AquaMaps models species distribution based on envelopes of environmental preference, such as temperature, depth, and salinity; these preference envelopes are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species (Fig S1B).  To roughly constrain species ranges to appropriate georegions, the AquaMaps model uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@fao_fisheries_and_aquaculture_department_cwp_2015] boundaries.  Of the resulting maps, 1296 (5.7%) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010].  
 
 <!--
-___OMIT: Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., previously, the Ocean Health Index defined presence as 40% or greater probability of occurrence [@halpern_index_2012; @halpern_patterns_2015].  In the 2016 OHI assessment, the presence threshold was eliminated, to better approximate the "extent of occurrence" generally indicated by IUCN maps, since the two datasets are used together.___
+OMIT: Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., previously, the Ocean Health Index defined presence as 40% or greater probability of occurrence [@halpern_index_2012; @halpern_patterns_2015].  In the 2016 OHI assessment, the presence threshold was eliminated, to better approximate the "extent of occurrence" generally indicated by IUCN maps, since the two datasets are used together
 -->
 
-__Comparison of taxonomic and regional distribution:__
-To examine the overall taxonomic distribution across the spatial datasets, we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps; we determined species presence within a grid cell as any non-zero overlap of a species polygon with the cell  ___(Fig S2)___.  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence, to best approximate the "extent of occurrence" generally indicated by IUCN maps.
+__Comparison of taxonomic and regional distribution__:
+To examine the overall taxonomic distribution across the spatial datasets, we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps; we determined species presence within a grid cell as any non-zero overlap of a species polygon with the cell  (Fig S2)  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence, to best approximate the "extent of occurrence" generally indicated by IUCN maps.
 
-__Comparison of paired maps:__
+__Comparison of paired maps__:
 Species range maps communicate a prediction of both the distribution of a species and the size of a species range.  To enable direct comparison of these measures between the two datasets, we identified "paired map" species, i.e. the subset of marine species that have range maps in both IUCN and AquaMaps current native distribution, using genus and species binomials as a matching key.  We used the taxize package [@scott_chamberlain_taxize_2013] in R [@r_core_team_r:_2016] to standardize species names and synonyms; for species with separate subpopulation maps in IUCN, we combined all subpopulations to create a single global population.   For each of these paired map species, we determined species presence within each spatial cell for each dataset using the same criteria outlined above.
 
 Overlaying paired distribution maps for each species, we defined and calculated _distribution alignment_ $\alpha_{dist}$ and _area ratio_ $\alpha_{area}$:
@@ -25,7 +25,7 @@ $$\alpha_{area} = \frac{A_{small}}{A_{large}} * 100\%$$
 
 For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset).  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets.  Distribution alignment uses overlapping predictions of presence as a measure of concurrence between the two datasets.  Area ratio compares range size, used by IUCN as a criterion to help define extinction risk; it also provides a proxy for frequency of commission and/or omission errors.
 
-__Examining issues in paired map alignment:__
+__Examining issues in paired map alignment__:
 Corals provide a useful case study to examine differences in species range alignment.  Corals are an intensely studied taxonomic group whose importance in supporting biodiversity is undisputed; their dependence on photosynthesis provides habitat-limiting life history traits, and they don't tend to move.  Extracting data from the IUCN API [@iucn_iucn_2015] we identified depth limitations of each coral species mapped in the IUCN dataset to verify that none are found below the photosynthetic depth limit of 200 m.  Using the same methodology as shown in Fig 2, we created a 200 m bathymetry raster from a 200 m bathymetry spatial dataset (public domain; available from Natural Earth, www.naturalearthdata.com) and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps rasters to examine distribution alignment and area ratio.
 
 AquaMaps' reliance upon FAO zones to constrain species ranges seems likely to result in abrupt species range boundaries where ecologically suitable habitat intersects with human-defined borders.  To explore the impact of these artificial constraints on species range predictions, we chose to focus on boundaries defined by longitude, as they seem less likely to coincide with ecological differences than boundaries defined by latitude.  As an example, we identified all AquaMaps species whose eastern or western range limit between between 25° S and 20° N latitudes coincided with the large vertical boundary between FAO regions 71 and 77 at 175° W longitude.
