--- a/ms_6_supplemental.Rmd
+++ b/ms_6_supplemental.Rmd
@@ -17,46 +17,61 @@ output:
 
 -->
 
-methods:
-IUCN raw -> grid -> raster -> final
-AM raw -> presence
+<!-- methods: -->
+<!-- IUCN raw -> grid -> raster -> final -->
+<!-- AM raw -> presence -->
 
-results/discussion:
-quad plot with risk and four species (?)
-four representative maps
+<!-- results/discussion: -->
+<!-- quad plot with risk and four species (?) -->
+<!-- four representative maps -->
 
-coral quadrant shifts
+<!-- coral quadrant shifts -->
 
-AM thresholds? not mentioned in body of paper as of yet
+<!-- AM thresholds? not mentioned in body of paper as of yet -->
 
 ## Preparing AquaMaps and IUCN data layers
 
-__Fig S1.__  Examples of AquaMaps and IUCN raw species range data. (A, B) AquaMaps distribution of _Thunnus alalunga_ (Albacore Tuna) (AquaMaps 2013e) showing global range with varying probabilities of occurrence assigned to 0.5° grid cells (A) and presence within 0.5° grid cells (B). (C, D) IUCN distribution of _T. alalunga_ (IUCN 2011b) represented as extent of occurrence polygons (C) and presence within 0.5° grid cells (D).
+![](figures/Fig_S1ab.png)
 
-<!-- 	
-Fis-22832, Thunnus alalunga, 21856, citation general IUCN; 
-Reviewed distribution maps for Thunnus alalunga (Albacore), with modelled year 2100 native range map based on IPCC A2 emissions scenario. www.aquamaps.org, version of Aug. 2013. Web. Accessed 11 Sep. 2016.
--->
+![](figures/Fig_S1cd.png)
 
-__Fig S2.__ Rasterizing shapefiles provided by IUCN. A portion of the _T. alalunga_ range map is used to exemplify the rasterization process.  To enable direct comparison of IUCN species ranges to AquaMaps species ranges, the raw IUCN polygon (A) is overlaid with a 0.5° degree grid matching the AquaMaps grid (B).  Each cell is assigned a value of "present" if the cell overlaps any portion of the polygon (C).  The resulting raster (D).
+> __Fig S1.__  Examples of AquaMaps and IUCN raw species range data. (A, B) AquaMaps distribution of _Thunnus alalunga_ (Albacore Tuna) (AquaMaps 2013e) showing global range with varying probabilities of occurrence assigned to 0.5° grid cells (A) and presence within 0.5° grid cells (B). (C, D) IUCN distribution of _T. alalunga_ (IUCN 2011b) represented as extent of occurrence polygons (C) and presence within 0.5° grid cells (D).
+
+<!-- Fis-22832, Thunnus alalunga, 21856 -->
+
+![](figures/Fig_S2a.png)
+
+![](figures/Fig_S2b.png)
+
+![](figures/Fig_S2c.png)
+
+![](figures/Fig_S2d.png)
+
+> __Fig S2.__ Rasterizing shapefiles provided by IUCN. A portion of the _T. alalunga_ range map is used to exemplify the rasterization process.  To enable direct comparison of IUCN species ranges to AquaMaps species ranges, the raw IUCN polygon (A) is overlaid with a 0.5° degree grid matching the AquaMaps grid (B).  Each cell is assigned a value of "present" if the cell overlaps any portion of the polygon (C).  The resulting raster (D).
 
 ## Representative maps from each quadrant
 
-__Fig S3.__ Representative species maps (AquaMaps 2013abcd; Conch 2013ab; IUCN 2011a; IUCN 2012) to illustrate each quadrant from Fig 2A.  Each map is positioned to match its quadrant in Fig 2A.
+![](figures/Fig_S3.png)
+
+> __Fig S3.__ Representative species maps (AquaMaps 2013abcd; Conch 2013ab; IUCN 2011a; IUCN 2012) to illustrate each quadrant from Fig 2A.  Each map is positioned to match its quadrant in Fig 2A.  FAO Major Fishing Area boundaries [@fao_fisheries_and_aquaculture_department_cwp_2015] are outlined in light grey.
 (A) Distribution-matched: _Conus episcopatus_, the dignified cone snail.  Distributions show excellent overlap in the western Pacific, though IUCN range extends well beyond the bounds of the AquaMaps range.
 (B) Well-matched: _Kajikia albida_, the Atlantic white marlin.  Distributions from each data set show nearly complete overlap, and very similar range size.
 (C) Poorly-matched: _Acanthurus nigroris_, the blue-lined surgeonfish.  IUCN predicts species distribution only near the Hawaiian islands; AquaMaps predicts extensive distribution throughout the central and western Pacific Ocean.  The datasets align in neither distribution nor range size.
 (D) Area-matched: _Conus magnificus_, the magnificent cone snail.  Distributions overlap in the southern Pacific, but align poorly elsewhere.  The range sizes are similar.
 
 <!--
-W-Msc-215455, Conus episcopatus, 192664 citation Conch Books, Hackenheim, Germany; Computer generated distribution maps for Conus episcopatus, with modelled year 2100 native range map based on IPCC A2 emissions scenario. www.aquamaps.org, version of Aug. 2013. Web. Accessed 11 Sep. 2016.
-
-W-Msc-215551, Conus magnificus, 192573 citation Conch Books, Hackenheim, Germany; Computer generated distribution maps for Conus magnificus, with modelled year 2100 native range map based on IPCC A2 emissions scenario. www.aquamaps.org, version of Aug. 2013. Web. Accessed 11 Sep. 2016.
-
-Fis-31079, Acanthurus nigroris, 177999 citation IUCN; Reviewed distribution maps for Acanthurus nigroris (Bluelined surgeonfish), with modelled year 2100 native range map based on IPCC A2 emissions scenario. www.aquamaps.org, version of Aug. 2013. Web. Accessed 11 Sep. 2016.
-
-Fis-164253, Kajikia albida, 170322 citation IUCN; Computer generated distribution maps for Kajikia albida (Atlantic white marlin), with modelled year 2100 native range map based on IPCC A2 emissions scenario. www.aquamaps.org, version of Aug. 2013. Web. Accessed 11 Sep. 2016.
+W-Msc-215455, Conus episcopatus, 192664
+W-Msc-215551, Conus magnificus, 192573
+Fis-31079, Acanthurus nigroris, 177999
+Fis-164253, Kajikia albida, 170322
 -->
+
+## Shifts in coral species range map alignment due to depth clipping
+
+![](figures/Fig_S4.png)
+
+> __Fig. S4.__  Shift in alignment of paired-map coral species due to clipping IUCN ranges to areas shallower than 200 m.  The grey lines represent the change in apparent alignment for a single species.  Most coral species shift rightward from the upper left quadrant to the upper right, with little if any loss in distribution alignment, since in general, only unsuitable habitat has been removed.  Leftward shifts can be seen in species whose larger original range is represented in AquaMaps; by trimming IUCN ranges, the area ratio becomes smaller.
+
 
 <!--
 ## Risk by quadrant
